--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
   <div class="container">
     <section id="home" class="route show home">
       <canvas class="hero-canvas"></canvas>
-      <h1 class="home__title"><a route="poems" href="#poems">Chubascos</a></h1>
+      <h1 class="home__title"><a id="home-title" route="poems" href="#poems">Chubascos</a></h1>
       <p class="random-poem" id="random-poem"></p>
     </section>
     <section id="poem-section" class="route poem-section">
