--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <section id="home" class="route show home">
       <canvas class="hero-canvas"></canvas>
       <h1 class="home__title"><a id="home-title" route="poems" href="#poems">Chubascos</a></h1>
-      <p class="random-poem" id="random-poem"></p>
+      <p id="fade-text" class="fade-text"></p>
     </section>
     <section id="poem-section" class="route poem-section">
       <h2 id="show-poem-title" class="poem-title">Chubascos</h2>
@@ -67,6 +67,8 @@
           </p>
         </a>
       </div>
+      
+      <a id="enter-cms" class="enter-cms" href="cms/">Crear y editar poemas</a>
     </section>
     <section id="poets" class="route"></section>
   </div>
