add: icon links

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="theme-color" content="#faf8f6">
   <meta name="description" content="Chubascos alberga a todos los poetas vivos invitados que le envían un mensaje a cualquiera que sea su objetivo">
   <title>Chubascos | La oda de los poemas desde el 2019</title>
   <link rel="stylesheet" href="main.css">
   <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
+  <link rel="icon" sizes="192x192" href="./images/icon.png">
+  <link rel="apple-touch-icon" href="./images/touch-icon-iphone.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="./images/touch-icon-ipad.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="./images/touch-icon-iphone-retina.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="./images/touch-icon-ipad-retina.png">
 </head>
 
 <body>
