enhance: poems list style

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="theme-color" content="#faf8f6">
-  <meta name="description" content="Chubascos alberga a todos los poetas vivos invitados que le envían un mensaje a cualquiera que sea su objetivo">
+  <meta name="description"
+    content="Chubascos alberga a todos los poetas vivos invitados que le envían un mensaje a cualquiera que sea su objetivo">
   <title>Chubascos | La oda de los poemas desde el 2019</title>
   <link rel="stylesheet" href="main.css">
   <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
@@ -22,16 +23,16 @@
     <p wrap-amount="45"></p>
     <h1 id="poet-initials">Chubascos</h1>
   </div>
-  <header class="main-nav">
-    <a class="home-link" route="home" href="#home">Chubascos</a>
-    <nav>
-      <ul class="views-nav">
-        <!-- <li><a class="selected" route="poets" href="#poets">poetas</a></li> -->
-        <li><a href="#poems" route="poems">poemas</a></li>
-      </ul>
-    </nav>
-  </header>
   <div class="container">
+    <header class="main-nav">
+      <a class="home-link" route="home" href="#home">Chubascos</a>
+      <nav>
+        <ul class="views-nav">
+          <!-- <li><a class="selected" route="poets" href="#poets">poetas</a></li> -->
+          <li><a href="#poems" route="poems">poemas</a></li>
+        </ul>
+      </nav>
+    </header>
     <section id="home" class="route show home">
       <canvas class="hero-canvas"></canvas>
       <h1 class="home__title"><a id="home-title" route="poems" href="#poems">Chubascos</a></h1>
@@ -87,7 +88,8 @@
       </label>
       <label class="cms-label" for="code">
         <span class="cms-name">Código</span>
-        <input class="cms-input" name="code" id="code" type="password" placeholder="El código ultra mega secreto va aquí">
+        <input class="cms-input" name="code" id="code" type="password"
+          placeholder="El código ultra mega secreto va aquí">
       </label>
 
       <div id="tabs" class="tabs">
