--- a/public/index.html
+++ b/public/index.html
@@ -35,8 +35,8 @@
     </header>
     <section id="home" class="route show home">
       <canvas class="hero-canvas"></canvas>
-      <h1 class="home__title"><a id="home-title" route="poems" href="#poems">Chubascos</a></h1>
-      <p id="fade-text" class="fade-text"></p>
+      <h1 class="home__title"><a id="home-title" route="poems" class="spanified" href="#poems">Chubascos</a></h1>
+      <!-- <p id="fade-text" class="fade-text"></p> -->
     </section>
     <section id="poem-section" class="route poem-section">
       <h2 id="show-poem-title" class="poem-title">Chubascos</h2>
